--- a/tester/templates/list.html
+++ b/tester/templates/list.html
@@ -1,3 +1,3 @@
 {% for test in tests %}
-<a href = "/urlreport/{{ test.id }}/">{{ test.name }}</a> <br />
+<a href = "/urlreport/{{ test.id }}/">{{ test.name }}</a> ({{ test.run_every }} minutes) <br />
 {% endfor %}
