--- a/tester/templates/list.html
+++ b/tester/templates/list.html
@@ -1,3 +1,8 @@
+{% extends "base.html" %}
+
+{% block content %}
+
 {% for test in tests %}
 <a href = "/urlreport/{{ test.id }}/">{{ test.name }}</a> ({{ test.run_every }} minutes) <br />
 {% endfor %}
+{% endblock %}
